--- a/defs.html
+++ b/defs.html
@@ -21,6 +21,124 @@
     <symbol id="icon-cloze" viewBox="0 0 16 16" width="100%" height="100%">
       <path d="M2 13h4v1H2v-1zm5-6H2v1h5V7zm2 3V8l-3 3 3 3v-2h5v-2H9zM4.5 9H2v1h2.5V9zM2 12h2.5v-1H2v1zm9 1h1v2c-.02.28-.11.52-.3.7-.19.18-.42.28-.7.3H1c-.55 0-1-.45-1-1V4c0-.55.45-1 1-1h3c0-1.11.89-2 2-2 1.11 0 2 .89 2 2h3c.55 0 1 .45 1 1v5h-1V6H1v9h10v-2zM2 5h8c0-.55-.45-1-1-1H8c-.55 0-1-.45-1-1s-.45-1-1-1-1 .45-1 1-.45 1-1 1H3c-.55 0-1 .45-1 1z"/>
     </symbol>
+
+
+    <symbol id="alt-choice" viewBox="0 -16 32 32">
+       <path
+       style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:3.20000005;stroke-linecap:square;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       d="m 3,-9 3,3 7,-7"
+       id="path3435"
+       inkscape:connector-curvature="0"
+       sodipodi:nodetypes="ccc" />
+    <circle
+       style="fill:#ffffff;fill-opacity:1;fill-rule:evenodd;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       id="path3437-3-5"
+       cx="2"
+       cy="2.5"
+       r="0" />
+    <circle
+       style="fill:#ffffff;fill-opacity:1;fill-rule:evenodd;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       id="path3437-3-6"
+       cx="2"
+       cy="2.5"
+       r="0" />
+    <rect
+       style="opacity:1;fill:#000000;fill-opacity:1;stroke:#000000;stroke-width:1.4387939;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="rect4301-9"
+       width="16.517418"
+       height="2.5612056"
+       x="14.741291"
+       y="10.719397"
+       ry="0.065342911" />
+    <rect
+       style="opacity:1;fill:#000000;fill-opacity:1;stroke:#000000;stroke-width:1.4387939;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="rect4301-9-6"
+       width="16.517414"
+       height="2.5612061"
+       x="14.741293"
+       y="0.71939695"
+       ry="0.065342933" />
+    <rect
+       style="opacity:1;fill:#000000;fill-opacity:1;stroke:#000000;stroke-width:1.4208895;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="rect4301-9-4"
+       width="14.591228"
+       height="2.5791097"
+       x="16.704384"
+       y="-9.2895546"
+       ry="0.065799721" />
+    <ellipse
+       style="fill:#000000;fill-opacity:0;fill-rule:evenodd;stroke:#000000;stroke-width:1.57;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path3437-3-2-7-2"
+       cy="2"
+       cx="5.9749994"
+       ry="3.1979952"
+       rx="3.2229955" />
+    <ellipse
+       style="fill:#000000;fill-opacity:0;fill-rule:evenodd;stroke:#000000;stroke-width:1.57256484;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path3437-3-2-7-2-9"
+       cy="12"
+       cx="5.9960022"
+       ry="3.2137177"
+       rx="3.2177155" />
+
+    </symbol>
+
+    <symbol id="alt-match" viewBox="0 0 32 32">
+<circle
+       style="fill:#000000;fill-opacity:0;fill-rule:evenodd;stroke:#000000;stroke-width:1.57281256;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path3437-3-2-7"
+       cy="4"
+       cx="4"
+       r="3.2135937" />
+    <ellipse
+       style="fill:#000000;fill-opacity:0;fill-rule:evenodd;stroke:#000000;stroke-width:1.58565593;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path3437-3-2-7-0"
+       cy="4"
+       cx="28"
+       rx="3.2071722"
+       ry="3.2071719" />
+    <path
+       style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:3.976;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       d="M 7,4 C 25,4 25,4 25,4"
+       id="path4552"
+       inkscape:connector-curvature="0" />
+    <ellipse
+       style="fill:#000000;fill-opacity:0;fill-rule:evenodd;stroke:#000000;stroke-width:1.561;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path3437-3-2-7-4"
+       cy="27.999989"
+       cx="4.0500813"
+       rx="3.1694849"
+       ry="3.2195547" />
+    <ellipse
+       style="fill:#000000;fill-opacity:0;fill-rule:evenodd;stroke:#000000;stroke-width:1.57281268;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path3437-3-2-7-05"
+       cy="16"
+       cx="28"
+       rx="3.213594"
+       ry="3.2135937" />
+    <ellipse
+       style="fill:#000000;fill-opacity:0;fill-rule:evenodd;stroke:#000000;stroke-width:1.58249426;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path3437-3-2-7-94"
+       cy="16"
+       cx="4"
+       rx="3.2581873"
+       ry="3.2087529" />
+    <ellipse
+       style="fill:#000000;fill-opacity:0;fill-rule:evenodd;stroke:#000000;stroke-width:1.56429553;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path3437-3-2-7-6"
+       cy="28"
+       cx="27.956823"
+       rx="3.1746759"
+       ry="3.2178528" />
+    <path
+       style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:3.78923607;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       d="M 6.8133881,26.293717 C 25.220113,17.631231 25.220113,17.631231 25.220113,17.631231"
+       id="path5180"
+       inkscape:connector-curvature="0" />
+
+</symbol>
+
+
   </svg>
 
   <h2>Exemple 1</h2>
@@ -44,7 +162,31 @@
       </div>
       <div>
         <svg class="icon-large">
+          <use xlink:href="#alt-choice" />
+        </svg>
+        <div class="explanation">
+          <h3>Choix multiples</h3>
+          <p>
+            Choisir une ou plusieurs réponses parmi une liste de choix possibles.
+          </p>
+        </div>
+        <hr/>
+      </div>
+      <div>
+        <svg class="icon-large">
           <use xlink:href="#icon-match" />
+        </svg>
+        <div class="explanation">
+          <h3>Appariement</h3>
+          <p>
+            Créer des liaisons entre des éléments appartenant à deux ensembles différents.
+          </p>
+        </div>
+        <hr/>
+      </div>
+      <div>
+        <svg class="icon-large">
+          <use xlink:href="#alt-match" />
         </svg>
         <div class="explanation">
           <h3>Appariement</h3>
@@ -115,6 +257,16 @@
         <div class="panel-heading">
           <h3 class="panel-title">
             <svg class="icon-small">
+              <use xlink:href="#alt-choice" />
+            </svg>
+            Maekar eyrie doran promise me ned arya ?
+          </h3>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <svg class="icon-small">
               <use xlink:href="#icon-choice" />
             </svg>
             Dorne god's eye jaime fingers mya stone. Jeor mormont ?
@@ -126,6 +278,16 @@
           <h3 class="panel-title">
             <svg class="icon-small">
               <use xlink:href="#icon-match" />
+            </svg>
+            Maekar eyrie doran promise me ned arya our knees ?
+          </h3>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <svg class="icon-small">
+              <use xlink:href="#alt-match" />
             </svg>
             Maekar eyrie doran promise me ned arya our knees ?
           </h3>
